third-sec bordering

--- a/index.html
+++ b/index.html
@@ -45,17 +45,41 @@
 <!-- Secound section work end here -->
 
 <!-- Third section work start here -->
-<section>
-    <div>
+<section  >
+    <div class="third-part">
         <h1>
             Our Donate Plan
         </h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero vero eius saepe, id deserunt at asperiores, soluta deleniti rerum tempore dolore ut modi in. Nostrum harum qui ad. Dolore, voluptas.</p>
     </div>
-    <div>
-        
+
+    <div class="third-part2">
+        <div id="id-no1" class="first">
+            <h2>Food For A Family</h2>
+            <p>Amet minim mollit non deserunt
+                ullamco est sit aliqua dolor do amet
+                sint. Velit officia consequat duis enim
+                velit mollit.</p>
+        </div>
+        <div id="id-no2" class="first">
+            <h2>
+                Shelter for a family
+            </h2>
+            <p>Amet minim mollit non deserunt
+                ullamco est sit aliqua dolor do amet
+                sint. Velit officia consequat duis enim
+                velit mollit.</p>
+        </div>
+        <div id="id-no3" class="first">
+            <h2>Education for a child</h2>
+            <p>Amet minim mollit non deserunt
+                ullamco est sit aliqua dolor do amet
+                sint. Velit officia consequat duis enim
+                velit mollit.</p>
+        </div>
     </div>
 </section>
+<!-- Third section work end here -->
 
 </body>
 </html>
