four,five,six sec added

--- a/index.html
+++ b/index.html
@@ -81,5 +81,62 @@
 </section>
 <!-- Third section work end here -->
 
+
+<!-- Fourth section work start here -->
+<section>
+    <div class="fourth">
+        <div class="fourth-1">
+            <h1>
+                Their lives depend on your donation
+            </h1>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio excepturi commodi nemo quaerat laboriosam ipsa, cupiditate atque quia repudiandae quas et earum sit non dolorum dolore? Vitae debitis consectetur consequuntur?
+            </p>
+            <button>How to Contribute?</button>
+        </div>
+        <div class="fourth-1">
+            <img src="images/21.jpg" alt="">
+        </div>
+    </div>
+</section>
+<!-- Fourth section work end here -->
+
+<!-- Fifth section work start here -->
+<section>
+<div class="fifth"> <!-- calling -->
+    <div class="fifth-1">
+        <img src="images/22.jpeg" alt="">
+    </div>
+    <div class="fifth-1">
+        <h1>
+            Their lives depend on your donation
+        </h1>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, pariatur iste. Aperiam natus rem id doloribus ut tempore magnam aliquam ipsa nulla temporibus veritatis, nostrum cum labore, corrupti dolores non.
+        </p>
+        <button>How to Contribute?</button>
+    </div>
+</div>
+</section>
+<!-- Fifth section work end here -->
+
+<!-- sixth section work start here  -->
+<section>
+    <div class="six">
+        <div class="six-1">
+            <h1>
+                Their lives depend on your donation
+            </h1>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio excepturi commodi nemo quaerat laboriosam ipsa, cupiditate atque quia repudiandae quas et earum sit non dolorum dolore? Vitae debitis consectetur consequuntur?
+            </p>
+            <button>How to Contribute?</button>
+        </div>
+        <div class="six-1">
+            <img src="images/24.jpg" alt="">
+        </div>
+    </div>
+</section>
+
 </body>
 </html>
