--- a/index.html
+++ b/index.html
@@ -137,6 +137,27 @@
         </div>
     </div>
 </section>
+<!-- sixth section work end here -->
+
+<!-- seventh section work start here -->
+<section>
+    <div class="seven"> <!-- calling -->
+        <div class="seven-1">
+            <img src="images/23.jpg" alt="">
+        </div>
+        <div class="seven-1">
+            <h1>
+                Their lives depend on your donation
+            </h1>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, pariatur iste. Aperiam natus rem id doloribus ut tempore magnam aliquam ipsa nulla temporibus veritatis, nostrum cum labore, corrupti dolores non.
+            </p>
+            <button>How to Contribute?</button>
+        </div>
+    </div>
+    </section>
+    <!-- seventh section work end here -->
+    
 
 </body>
 </html>
