footer and eight sec added

--- a/index.html
+++ b/index.html
@@ -157,7 +157,24 @@
     </div>
     </section>
     <!-- seventh section work end here -->
-    
+
+    <!-- Eight section work start here -->
+    <section>
+        <div class="eight">
+            <h1>
+                Get My Updates
+            </h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nesciunt exercitationem unde ipsa quo accusamus ipsum, quaerat impedit in itaque sunt corporis, eveniet optio! Omnis ullam animi aliquid iure in.</p>
+        </div>
+        <div class="eight-1">
+            <input type="email" placeholder="Email">
+            <button type="submit">Subscribe</button>
+        </div>
+    </section>
 
 </body>
+<footer>
+    <h1>Be Humble</h1>
+    <p>I’m Gonna do It</p>
+</footer>
 </html>
